# RustCleaner

./: .env.example  .gitignore  .replit  Cargo.toml  README.md  replit.md
src/: app.rs  cleaner.rs  config.rs  duplicate_finder.rs  file_category.rs  main.rs  progress.rs  scanner.rs
